Beginning firebase connection

--- a/wasteagram/android/app/build.gradle
+++ b/wasteagram/android/app/build.gradle
@@ -26,6 +26,12 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    plugins {
+        id 'edu.oregonstate.lenzb.wasteagramn'
+        id 'com.google.gms.google-services'
+    }
+
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
