--- a/wasteagram/android/app/build.gradle
+++ b/wasteagram/android/app/build.gradle
@@ -24,13 +24,9 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
 android {
-
-    plugins {
-        id 'edu.oregonstate.lenzb.wasteagramn'
-        id 'com.google.gms.google-services'
-    }
 
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
@@ -53,10 +49,11 @@ android {
         applicationId "edu.oregonstate.lenzb.wasteagram"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -66,6 +63,10 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    //     plugins {
+    //     id 'edu.oregonstate.lenzb.wasteagram'
+    //     id 'com.google.gms.google-services'
+    // }
 }
 
 flutter {
