--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^4.0.3
   firebase_core: ^2.7.1
   cloud_firestore: ^4.4.4
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
