--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^2.7.1
   cloud_firestore: ^4.4.4
   intl: ^0.18.0
+  location: ^4.2.0
 
 dev_dependencies:
   flutter_test:
