--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   intl: ^0.18.0
   location: ^4.2.0
   image_picker: ^0.8.7
+  firebase_storage: ^11.0.15
+  path_provider: ^2.0.13
 
 dev_dependencies:
   flutter_test:
