--- a/wasteagram/pubspec.yaml
+++ b/wasteagram/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   image_picker: ^0.8.7
   firebase_storage: ^11.0.15
   path_provider: ^2.0.13
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
